Fix home hero width on mobile

--- a/source/stylesheets/blocks/_image-banner.sass
+++ b/source/stylesheets/blocks/_image-banner.sass
@@ -24,6 +24,10 @@
   +center
   +padding(2)
   z-index: 1
+  width: 90%
+
+  +at-breakpoint(lap)
+    width: auto
 
 .image-banner__pre-title
   +heading-font-family
